2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/ez80_z80/memcpy.s,
	  device/lib/ez80_z80/Makefile.in,
	  device/lib/gbz80/memcpy.s,
	  device/lib/gbz80/Makefile.in,
	  device/lib/z180/memcpy.s,
	  device/lib/z180/Makefile.in,
	  device/lib/z80n/memcpy.s,
	  device/lib/z80n/Makefile.in:
	  Implement RFE #664 for ez80_z80, GBZ80, Z180 and Z80N ports

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Implement RFE #636: optimize stack allocation for eZ80

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCval.c:
	  Revert unnecessary change.

2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>

	* device/lib/z80/Makefile.in,
	  device/lib/z80/__sdcc_bcall.s,
	  src/SDCCval.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/z80.h:
	  Initial implementation of RFE #152 for Z80 port.

2020-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3085.c:
	  Fix bug #3085.

2020-07-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3080.c:
	  Fix bug #3080.

2020-07-16 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdlib.h,
	  device/lib/__itoa.c,
	  device/lib/__ltoa.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  device/lib/printfl.c,
	  device/lib/z80/__itoa.s,
	  device/lib/z80/__ltoa.s,
	  doc/sdccman.lyx,
	  support/regression/tests/itoa.c,
	  support/regression/tests/ltoa.c,
	  .version:
	  Fix remaining part of bug #3077.
	* src/stm8/peeph.def:
	  Bit testing jump inversion rules, picked from patch by Basil Hussain.

2020-07-16 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/peeph-r2k.def,
	  src/z80/peeph-tlcs90.def,
	  src/z80/peeph-z80.def,
	  src/z80/peeph.def:
	  Merge common peep hole rules for Z80 family.

2020-07-15 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/z80.h: