@@ -1,3 +1,10 @@
+2020-07-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc2.cc,
+	  support/regression/tests/bug-3087.c,
+	  src/z80/gen.c:
+	  Fix bug #3087, implement part of RFE #691.
+
 2020-07-17 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* device/lib/ez80_z80/memcpy.s,
